[package]
name = "ethccgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs.git" }
eyre = "0.6.8"
itertools = "0.10.3"
tokio = { version = "1.18.2", features = ["full"] }
